fix typo on name of task

--- a/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
@@ -98,7 +98,7 @@
   with_items: "{{ esxi_hosts }}"
   ignore_errors: true
 
-- name: Exit maintenance on hosts to allow deletion of vCSA VMs
+- name: Exit maintenance on hosts to allow deletion of vCLS VMs
   vmware_maintenancemode:
     hostname: "{{ item }}"
     username: "{{ esxi_user }}"
