--- a/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/teardown_with_esxi.yml
@@ -87,7 +87,7 @@
   with_items: "{{ esxi_hosts }}"
   ignore_errors: true
 
-- name: Remove ESXi Hosts to vCenter
+- name: Remove ESXi Hosts from vCenter
   vmware_host:
     datacenter_name: '{{ dc1 }}'
     cluster_name: '{{ ccr1 }}'
@@ -98,41 +98,7 @@
   with_items: "{{ esxi_hosts }}"
   ignore_errors: true
 
-- name: Exit maintenance on hosts to allow deletion of vCLS VMs
-  vmware_maintenancemode:
-    hostname: "{{ item }}"
-    username: "{{ esxi_user }}"
-    password: "{{ esxi_password }}"
-    esxi_hostname: "{{ item }}"
-    timeout: 3600
-    state: absent
-  with_items: "{{ esxi_hosts }}"
-  delegate_to: localhost
-
-- name: Gather all remaining VMs on hosts
-  vmware_vm_info:
-    hostname: '{{ item }}'
-    username: '{{ esxi_user }}'
-    password: '{{ esxi_password }}'
-  delegate_to: localhost
-  register: vminfo
-  with_items: "{{ esxi_hosts }}"
-
-- name: Remove remaining any vCLS VMs
-  vmware_guest:
-    hostname: "{{ item.0.item }}"
-    username: '{{ esxi_user }}'
-    password: '{{ esxi_password }}'
-    uuid: "{{ item.1.uuid }}"
-    force: true
-    state: absent
-  delegate_to: localhost
-  with_subelements:
-    - "{{ vminfo.results }}"
-    - virtual_machines
-  when: "'vCLS' in item.1.guest_name"
-
-- name: Umount NFS datastores to ESXi (1/2)
+- name: Umount NFS datastores from ESXi (1/2)
   vmware_host_datastore:
       hostname: '{{ item }}'
       username: '{{ esxi_user }}'
@@ -141,7 +107,7 @@
       state: absent
   with_items: "{{ esxi_hosts }}"
 
-- name: Umount NFS datastores to ESXi (2/2)
+- name: Umount NFS datastores from ESXi (2/2)
   vmware_host_datastore:
       hostname: '{{ item }}'
       username: '{{ esxi_user }}'
