tests: use FreeBSD13 for the guests
Depends-On: https://github.com/ansible/ansible-zuul-jobs/pull/994

It seems we've got much better results if we use FreeBSD13 for our
guest VMs.

This commit re-enables
https://github.com/ansible-collections/community.vmware/pull/957.

Also, ensures vmware_vm_inventory get access to prepare_vmware_tests.

--- a/tests/integration/targets/vmware_guest/tasks/cdrom_d1_c1_f0.yml
+++ b/tests/integration/targets/vmware_guest/tasks/cdrom_d1_c1_f0.yml
@@ -43,7 +43,7 @@
     datacenter: "{{ dc1 }}"
     cdrom:
       type: iso
-      iso_path: "[{{ ro_datastore }}] fedora.iso"
+      iso_path: "[{{ ro_datastore }}] freebsd13.iso"
     state: present
   register: cdrom_vm
 
@@ -137,7 +137,7 @@
       datastore: "{{ rw_datastore }}"
     cdrom:
       type: iso
-      iso_path: "[{{ ro_datastore }}] fedora.iso"
+      iso_path: "[{{ ro_datastore }}] freebsd13.iso"
   register: cdrom_vm
 
 - debug: var=cdrom_vm
