--- a/tests/integration/targets/vmware_guest/tasks/template_d1_c1_f0.yml
+++ b/tests/integration/targets/vmware_guest/tasks/template_d1_c1_f0.yml
@@ -19,7 +19,7 @@
       scsi: paravirtual
     cdrom:
       type: iso
-      iso_path: "[{{ ro_datastore }}] fedora.iso"
+      iso_path: "[{{ ro_datastore }}] freebsd13.iso"
     networks:
     - name: VM Network
 
