--- a/tests/integration/targets/prepare_vmware_tests/tasks/setup_virtualmachines.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/setup_virtualmachines.yml
@@ -16,7 +16,7 @@
       scsi: paravirtual
     cdrom:
       type: iso
-      iso_path: "[{{ ro_datastore }}] fedora.iso"
+      iso_path: "[{{ ro_datastore }}] freebsd13.iso"
     networks:
     - name: VM Network
   with_items: '{{ virtual_machines }}'
@@ -40,7 +40,7 @@
       scsi: paravirtual
     cdrom:
       type: iso
-      iso_path: "[{{ ro_datastore }}] fedora.iso"
+      iso_path: "[{{ ro_datastore }}] freebsd13.iso"
     networks:
     - name: VM Network
   with_items: '{{ virtual_machines_in_cluster }}'
