--- a/tests/integration/targets/vmware_guest_network/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_network/tasks/main.yml
@@ -34,7 +34,7 @@
         scsi: paravirtual
       cdrom:
         type: iso
-        iso_path: "[{{ ro_datastore }}] fedora.iso"
+        iso_path: "[{{ ro_datastore }}] freebsd13.iso"
       networks:
       - name: VM Network
 
