--- a/tests/integration/targets/vmware_host_tcpip_stacks/tasks/main.yml
+++ b/tests/integration/targets/vmware_host_tcpip_stacks/tasks/main.yml
@@ -6,12 +6,12 @@
     name: prepare_vmware_tests
   vars:
     setup_attach_host: true
+    setup_switch: true
 
 - name: include tasks pre.yml
   include_tasks: pre.yml
 
-- name: include tasks vmware_host_tcpip_stacks_tests.yml
-  include_tasks: vmware_host_tcpip_stacks_tests.yml
-
-- name: include tasks destroy.
-  include_tasks: destroy.yml
+- block:
+  - include_tasks: vmware_host_tcpip_stacks_tests.yml
+  always:
+  - include_tasks: destroy.yml
