--- a/tests/integration/targets/vmware_portgroup/tasks/main.yml
+++ b/tests/integration/targets/vmware_portgroup/tasks/main.yml
@@ -72,6 +72,46 @@
         that:
           - pg_info.changed
 
+    - name: Create portgroup with traffic shaping
+      vmware_portgroup:
+        hostname: '{{ vcenter_hostname }}'
+        username: '{{ vcenter_username }}'
+        password: '{{ vcenter_password }}'
+        vswitch: '{{ switch1 }}'
+        portgroup: 'pg_ts'
+        cluster_name: "{{ ccr1 }}"
+        traffic_shaping:
+          enabled: true
+          average_bandwidth: 100000
+          peak_bandwidth: 100000
+          burst_size: 102400
+        validate_certs: false
+        state: present
+      register: create_portgroup_with_traffic_shaping_result
+
+    - assert:
+        that:
+          - create_portgroup_with_traffic_shaping_result.changed
+
+    # Issue 955
+    - name: Disable traffic shaping
+      vmware_portgroup:
+        hostname: '{{ vcenter_hostname }}'
+        username: '{{ vcenter_username }}'
+        password: '{{ vcenter_password }}'
+        vswitch: '{{ switch1 }}'
+        portgroup: 'pg_ts'
+        cluster_name: "{{ ccr1 }}"
+        traffic_shaping:
+          enabled: false
+        validate_certs: false
+        state: present
+      register: disable_traffic_shaping_result
+
+    - assert:
+        that:
+          - disable_traffic_shaping_result.changed
+
     - name: Integration test a PortGroup name with special characters
       block:
         - name: Create Switch with special characters
