--- a/tests/integration/targets/vmware_vm_config_option/tasks/main.yml
+++ b/tests/integration/targets/vmware_vm_config_option/tasks/main.yml
@@ -17,7 +17,7 @@
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
         esxi_hostname: "{{ esxi_hosts[0] }}"
-        get_config_option_keys: True
+        get_hardware_versions: True
       register: config_option_keys_1
 
     - debug:
@@ -31,7 +31,7 @@
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
         cluster_name: "{{ ccr1 }}"
-        get_config_option_keys: True
+        get_hardware_versions: True
       register: config_option_keys_2
 
     - debug:
@@ -74,7 +74,7 @@
             datacenter: "{{ dc1 }}"
             esxi_hostname: "{{ esxi_hosts[0] }}"
             get_guest_os_ids: True
-            config_option_key: "{{ config_option_keys_1['instance']['Supported hardware versions'][0] }}"
+            hardware_version: "{{ config_option_keys_1['instance']['Supported hardware versions'][0] }}"
           register: guest_ids_2
           ignore_errors: True
 
@@ -101,7 +101,7 @@
         password: "{{ vcenter_password }}"
         datacenter: "{{ dc1 }}"
         esxi_hostname: "{{ esxi_hosts[0] }}"
-        get_config_option: True
+        get_config_options: True
         guest_id: "rhel6_64Guest"
       register: recommended_configs
       ignore_errors: True
