--- a/changelogs/fragments/892-vmware_vmkernel.yml
+++ b/changelogs/fragments/892-vmware_vmkernel.yml
@@ -1,2 +1,2 @@
 bugfixes:
-  - Fix a bug that prevented enabling VSAN on more than one vmk, risking splutting the whole cluster during interface migration scenarios (https://github.com/ansible-collections/community.vmware/issues/891)
+  - Fix a bug that prevented enabling VSAN on more than one vmk, risking splitting the whole cluster during interface migration scenarios (https://github.com/ansible-collections/community.vmware/issues/891)
