--- a/tools/prepare_release.yml
+++ b/tools/prepare_release.yml
@@ -1,9 +1,5 @@
 - hosts: localhost
-  pre_tasks:
-    - name: Install tox
-      ansible.builtin.pip:
-        name: tox
-
+  tasks:
     - name: Generate version
       block:
         - name: Get the next release version
@@ -15,15 +11,11 @@
             version: "{{ result.stdout }}"
       when: version is not defined
 
-  tasks:
     - name: Create release branch
       ansible.builtin.shell: git checkout -b "prepare_{{ version }}_release"
 
-    - name: Rescue docs/docsite
-      ansible.builtin.shell: 'mv ../docs/docsite /tmp'
-
-    - name: Refresh the README.md
-      ansible.builtin.shell: tox -e add_docs
+    - name: Update documentation
+      import_tasks: create_documentation.yml
 
     - name: Refresh the changelog
       ansible.builtin.shell: 'tox -e antsibull-changelog -- release --verbose --version {{ version }}'
@@ -32,9 +24,6 @@
       ansible.builtin.file:
         path: changelogs/fragments
         state: absent
-
-    - name: Restore docs/docsite
-      ansible.builtin.shell: 'mv /tmp/docsite ../docs'
 
     - name: Add everything
       ansible.builtin.shell: git add --all
