--- a/changelogs/fragments/1085_add_show_tag_to_vmware_datastore_info.yml
+++ b/changelogs/fragments/1085_add_show_tag_to_vmware_datastore_info.yml
@@ -1,3 +1,3 @@
 minor_changes:
-  - vmware_datastore_info - added show_tag parameters to allow datastore tags to be read in a uniform way across _info modules.
+  - vmware_datastore_info - added show_tag parameters to allow datastore tags to be read in a uniform way across _info modules  (https://github.com/ansible-collections/community.vmware/pull/1085).
   - vmware_rest_client module_util - added function get_tags_for_datastore for convenient tag collection.
