portgroup_type is deprecated

--- a/tests/integration/targets/prepare_vmware_tests/tasks/setup_dvs_portgroup.yml
+++ b/tests/integration/targets/prepare_vmware_tests/tasks/setup_dvs_portgroup.yml
@@ -5,7 +5,7 @@
     portgroup_name: '{{ dvpg1 }}'
     vlan_id: 0
     num_ports: 32
-    portgroup_type: earlyBinding
+    port_binding: static
     state: present
 
 - name: Create the DVS PG with slash in name
@@ -14,5 +14,5 @@
     switch_name: '{{ dvswitch1 }}'
     vlan_id: 0
     num_ports: 120
-    portgroup_type: earlyBinding
+    port_binding: static
     state: present
