--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -596,6 +596,28 @@ releases:
       name: vmware_vm_config_option
       namespace: ''
     release_date: '2021-10-05'
+  1.16.0:
+    changes:
+      bugfixes:
+      - update_vswitch - add the possibility to remove nics from vswitch (https://github.com/ansible-collections/community.vmware/issues/536)
+      - vmware_guest_serial_port - handle correct serial backing type (https://github.com/ansible-collections/community.vmware/issues/1043).
+      - vmware_host_lockdown - Fix an issue when enabling or disabling lockdown mode
+        failes (https://github.com/ansible-collections/community.vmware/issues/1083)
+      minor_changes:
+      - vmware - add vTPM information to default gather information (https://github.com/ansible-collections/community.vmware/pull/1082).
+      - vmware_guest_cross_vc_clone - Added the is_template option to mark a cloned
+        vm/template as a template (https://github.com/ansible-collections/community.vmware/pull/996).
+    fragments:
+    - 1043_vmware_guest_serial.yml
+    - 1082_vmware.yml
+    - 1083_vmware_host_lockdown.yml
+    - 840_vmware_vswitch.yml
+    - 996_vmware_guest_cross_vc_clone.yml
+    modules:
+    - description: Add or remove vTPM device for specified VM.
+      name: vmware_guest_tpm
+      namespace: ''
+    release_date: '2021-11-05'
   1.2.0:
     changes:
       bugfixes:
