Fix getting the next release

--- a/tools/prepare_release.yml
+++ b/tools/prepare_release.yml
@@ -3,7 +3,7 @@
     - name: Generate version
       block:
         - name: Get the next release version
-          ansible.builtin.shell: git tag --sort=-creatordate|head -n1|perl -pe 's/(\d+\.)(\d+)\.\d+/"$1" . ($2+1) . ".0"/e'
+          ansible.builtin.shell: git tag --sort=-creatordate --merged|head -n1|perl -pe 's/(\d+\.)(\d+)\.\d+/"$1" . ($2+1) . ".0"/e'
           register: result
 
         - name: Set the release version
