always use debian8_64Guest in our functinal tests
The use of the rhel7_64Guest guest_id unlocks some CPU features that we
cannot use yet with our CI envionment. The virtualized ESXi won't be able
to spawn the nested VM properly.
A consequence is the `Disconnected from virtual machine.` error message.

--- a/tests/integration/targets/vmware_host_auto_start/tasks/main.yml
+++ b/tests/integration/targets/vmware_host_auto_start/tasks/main.yml
@@ -37,7 +37,7 @@
         folder: vm
         esxi_hostname: "{{ esxi1 }}"
         state: present
-        guest_id: centos7_64Guest
+        guest_id: debian8_64Guest
         disk:
         - size_gb: 1
           type: thin
