tests: use hw version 11
The ESXis of our CI come with an heterogeneous collection of CPU. The
goal is to avoid any dependency with recent CPU features.

--- a/tests/integration/targets/vmware_guest/tasks/network_with_device.yml
+++ b/tests/integration/targets/vmware_guest/tasks/network_with_device.yml
@@ -18,6 +18,7 @@
         datastore: "{{ rw_datastore }}"
     guest_id: rhel7_64guest
     hardware:
+      version: 11
       memory_mb: 128
       num_cpus: 1
     networks:
@@ -46,6 +47,7 @@
         datastore: "{{ rw_datastore }}"
     guest_id: rhel7_64guest
     hardware:
+      version: 11
       memory_mb: 128
       num_cpus: 1
     networks:
