--- a/tests/integration/targets/vmware_vswitch/tasks/main.yml
+++ b/tests/integration/targets/vmware_vswitch/tasks/main.yml
@@ -13,6 +13,17 @@
   - name: Ensure the vswitch is not already here
     include_tasks: teardown.yml
 
+  - name: Gether facts about the vmnics
+    community.vmware.vmware_host_vmnic_info:
+      hostname: '{{ esxi1 }}'
+      username: '{{ esxi_user }}'
+      password: '{{ esxi_password }}'
+      validate_certs: false
+      esxi_hostname: '{{ esxi1 }}'
+    register: my_vmnic
+
+  - debug: var=my_vmnic
+
   - name: Add a nic to a switch
     vmware_vswitch:
       hostname: '{{ esxi1 }}'
